@@ -1,5 +1,12 @@
 2008-03-20  Werner Koch  <wk@g10code.com>
 
+	* src/potomo: New.
+	* src/Makefile.am (gpg4win_pkg_gnupg_post_install): Remove mo file
+	creation.
+	(gpg4win_pkg_gnupgw_post_install): Convert po files.
+	(EXTRA_DIST): Include potomo.
+	* src/inst-gnupg2.nsi: Install all available mo files.
+	
 	* src/inst-gnupg2.nsi: Do not install com-certs.pem.
 
 2008-03-19  Werner Koch  <wk@g10code.com>
